--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.555.0",
-    "next": "16.0.7",
+    "next": "^16.0.10",
     "react": "19.2.0",
     "react-dom": "19.2.0",
+    "react-icons": "^5.5.0",
+    "react-social-icons": "^6.25.0",
     "resend": "^6.6.0",
     "tailwind-merge": "^3.4.0"
   },
